build/apps/hass-proxy/base/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: hass-proxy
  name: hass-proxy
spec:
  type: ExternalName
  ports:
    - name: hass-proxy
      port: 80 #8123
      targetPort: 80
  externalName: 192.168.40.12
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
